@@ -35,20 +35,24 @@
   if (str == nil) return nil;
   
   static NSCharacterSet *filterChars = nil;
-  if (filterChars == nil) {
-    // make a character set of control characters (but not whitespace/newline
-    // characters), and keep a static immutable copy to use for filtering
-    // strings
-    NSCharacterSet *ctrlChars = [NSCharacterSet controlCharacterSet];
-    NSCharacterSet *newlineWsChars = [NSCharacterSet whitespaceAndNewlineCharacterSet];
-    NSCharacterSet *nonNewlineWsChars = [newlineWsChars invertedSet];
-    
-    NSMutableCharacterSet *mutableChars = [[ctrlChars mutableCopy] autorelease];
-    [mutableChars formIntersectionWithCharacterSet:nonNewlineWsChars];
-    
-    [mutableChars addCharactersInRange:NSMakeRange(0x0B, 2)]; // filter vt, ff
-    
-    filterChars = [mutableChars copy];
+
+  @synchronized([GDataUtilities class]) {
+
+    if (filterChars == nil) {
+      // make a character set of control characters (but not whitespace/newline
+      // characters), and keep a static immutable copy to use for filtering
+      // strings
+      NSCharacterSet *ctrlChars = [NSCharacterSet controlCharacterSet];
+      NSCharacterSet *newlineWsChars = [NSCharacterSet whitespaceAndNewlineCharacterSet];
+      NSCharacterSet *nonNewlineWsChars = [newlineWsChars invertedSet];
+
+      NSMutableCharacterSet *mutableChars = [[ctrlChars mutableCopy] autorelease];
+      [mutableChars formIntersectionWithCharacterSet:nonNewlineWsChars];
+
+      [mutableChars addCharactersInRange:NSMakeRange(0x0B, 2)]; // filter vt, ff
+
+      filterChars = [mutableChars copy];
+    }
   }
   
   // look for any invalid characters
@@ -72,6 +76,52 @@
   }
   
   return str;
+}
+
++ (NSString *)userAgentStringForString:(NSString *)str {
+
+  // make a proper token without whitespace from the given string
+  //
+  // per http://www.w3.org/Protocols/rfc2616/rfc2616-sec2.html
+  // and http://www.mozilla.org/build/user-agent-strings.html
+
+  if (str == nil) return nil;
+
+  NSMutableString *result = [NSMutableString stringWithString:str];
+
+  // replace spaces with underscores
+  [result replaceOccurrencesOfString:@" "
+                          withString:@"_"
+                             options:0
+                               range:NSMakeRange(0, [result length])];
+
+  // delete http token separators and remaining whitespace
+  static NSCharacterSet *charsToDelete = nil;
+
+  @synchronized([GDataUtilities class]) {
+
+    if (charsToDelete == nil) {
+
+      // make a set of unwanted characters
+      NSString *const kSeparators = @"()<>@,;:\\\"/[]?={}";
+
+      NSMutableCharacterSet *mutableChars
+        = [[[NSCharacterSet whitespaceAndNewlineCharacterSet] mutableCopy] autorelease];
+
+      [mutableChars addCharactersInString:kSeparators];
+
+      charsToDelete = [mutableChars copy]; // hang on to an immutable copy
+    }
+  }
+
+  while (true) {
+    NSRange separatorRange = [result rangeOfCharacterFromSet:charsToDelete];
+    if (separatorRange.location == NSNotFound) break;
+
+    [result deleteCharactersInRange:separatorRange];
+  };
+
+  return result;
 }
 
 + (NSNumber *)doubleNumberOrInfForString:(NSString *)str {
